--- a/FrontEndSystem/angular.json
+++ b/FrontEndSystem/angular.json
@@ -28,8 +28,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/js/jquery.min.js",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ]
           },
           "configurations": {
