--- a/VactionApi/VactionApi.csproj
+++ b/VactionApi/VactionApi.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210216030307_ExtendedData.cs" />
+    <Compile Remove="Migrations\20210216030307_ExtendedData.Designer.cs" />
+    <Compile Remove="Migrations\20210216032414_ExtendedData.cs" />
+    <Compile Remove="Migrations\20210216032414_ExtendedData.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
