--- a/FrontEndSystem/angular.json
+++ b/FrontEndSystem/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "FrontEndSystem": {
@@ -24,19 +24,14 @@
               "src/assets"
             ],
             "styles": [
-            
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-               "./node_modules/alertifyjs/build/css/alertify.min.css" ,
-               "./node_modules/alertifyjs/build/css/themes/bootstrap.min.css",
-               "src/styles.css"
-                
+              "./node_modules/alertifyjs/build/css/alertify.min.css",
+              "./node_modules/alertifyjs/build/css/themes/bootstrap.min.css",
+              "src/styles.css"
             ],
             "scripts": [
-             
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/alertifyjs/build/alertify.min.js"
-              
-             
             ]
           },
           "configurations": {
@@ -130,6 +125,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "FrontEndSystem"
+    }
+  },
+  "defaultProject": "FrontEndSystem",
+  "cli": {
+    "analytics": "df6d7b6d-272e-4493-b521-2674024cd2f4"
+  }
 }
