--- a/FrontEndSystem/package.json
+++ b/FrontEndSystem/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "@auth0/angular-jwt": "^2.0.0",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
